# demo

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
amd-sev/: Cargo.toml  README.md
amd-sev/src/: main.rs
common/: Cargo.toml
common/src/: wasm.rs
intel-sgx/: Cargo.toml  README.md
intel-sgx/attestation-daemon/: Cargo.toml
intel-sgx/attestation-daemon/src/: main.rs
intel-sgx/attestation-enclave/: Cargo.toml
intel-sgx/attestation-enclave/src/: main.rs
intel-sgx/attestation-tenant/: Cargo.toml
intel-sgx/attestation-tenant/src/: cert_chain.rs  key.rs  main.rs  sig.rs
src/: main.rs
wasmtime-basic/: Cargo.toml  README.md  build.rs
wasmtime-basic/src/: add.c  add.rs  main.rs
wasmtime-custom-syscall/: Cargo.toml  README.md
wasmtime-custom-syscall/src/: app.rs  main.rs
wasmtime-native-embed/: Cargo.toml  README.md
wasmtime-native-embed/src/: main.rs
wasmtime-udp-echoserver/: Cargo.toml  README.md  build.rs
wasmtime-udp-echoserver/src/: app.rs  main.rs
wasmtime-wasi-custom/: Cargo.toml  README.md  build.rs
wasmtime-wasi-custom/src/: app.c  app.rs  main.rs
