[package]
name = "demo"
version = "0.1.0"
authors = ["nmccallu <npmccallum@redhat.com>"]
edition = "2018"

[dependencies]
ketuvim = { git = "https://github.com/enarx/ketuvim" }
sev = { git = "https://github.com/enarx/sev", features = ["openssl"] }
reqwest = "0.9.16"
codicon = "2.1.0"
libc = "0.2.53"

[patch.crates-io]
openssl-sys = { git = 'https://github.com/sfackler/rust-openssl' }
openssl = { git = 'https://github.com/sfackler/rust-openssl' }
