[package]
name = "wasmtime-basic"
version = "0.1.0"
authors = ["Mark Bestavros <mbestavr@redhat.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "0.11.0"
wabt = "0.7"

[features]

default = ["rust"]

c = []
rust = []
benchmark = []
