[package]
name = "attestation-tenant"
version = "0.1.0"
authors = ["Lily Sturmann <lsturman@redhat.com>"]
edition = "2018"

[dependencies]
sgx-isa = { version = "0.3.0" }
dcap-ql = "0.2.0"
failure = "0.1"
openssl = "0.10.23"
bufstream = "0.1.4"
serde_json = "1.0"
byteorder = "1"

[dependencies.mbedtls]
git = "https://github.com/haraldh/rust-mbedtls"
branch = "upstream_bindgen"
package = "mbedtls"
default-features = false
features = ["rdrand", "sgx"]
